[gd_scene load_steps=5 format=2]

[ext_resource path="res://SpriteFrames/Tile_SF.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Tile.gd" type="Script" id=2]
[ext_resource path="res://SpriteFrames/Shape_SF.tres" type="SpriteFrames" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Tile" type="Area2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="BackgroundSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "variant0"

[node name="ObjectSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "empty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
